--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ a {
     border: 1px solid #fff;
     padding: 15px 40px;
     border-radius: 5px;
+    margin: 0 20px;
 
 }
 
@@ -122,6 +123,8 @@ a {
     padding: 15px 40px;
 }
 
+banner-icon p {}
+
 .banner-icon i {
     height: 50px;
     width: 50px;
@@ -129,7 +132,8 @@ a {
     font-size: 30px;
     line-height: 50px;
     border-radius: 50%;
-
+    text-align: center;
+    margin: 0 10px;
 }
 
 .banner-icon p {
@@ -147,6 +151,10 @@ a {
 
 /*feature css End*/
 /*round box css start*/
+#round-box {
+    background-color: #f9f9f9;
+}
+
 .container .section-title {
     text-align: center;
 }
@@ -170,6 +178,12 @@ a {
     display: flex;
 }
 
+.round-item {
+    width: 25%;
+    text-align: center;
+    padding-top: 55px;
+}
+
 .round-item i {
     font-size: 30px;
     height: 150px;
@@ -184,10 +198,33 @@ a {
     font-size: 15px;
     font-weight: 700;
     padding: 27px 0 15px;
+    text-transform: uppercase;
 }
 
 .round-item p {
     font-size: 13px;
+    line-height: 22px;
+    padding: 0 40px;
 }
 
 /*round box css End*/
+/*Gallery css start*/
+.gallery-item .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.image {
+    width: 25%;
+}
+
+#gallery h3 {
+    font-size: 25px;
+    padding-top: 25px;
+}
+
+#gallery p {
+    font-size: 20px;
+    padding-bottom: 45px;
+}
